fixed invisible about section

--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ body:after {
 
 @media screen and (max-width: 768px) {
   .landing-heading {
-    font-size: 5rem;
+    font-size: 6rem;
   }
 
   .landing-subheading {
